--- a/index.html
+++ b/index.html
@@ -28,38 +28,37 @@
         background-color: transparent;
     }
     </style>
+
 </head>
 
 <body onload="init();">
-    <div class="container-fluid">
+
         <div id="full-size" >
-            <div id="layer1">
+            <div id="layer1" style="z-index: 0;">
                 <div class="canvas" id="canvasContainer"></div>
             </div>
-            <div id="layer2" width="100" height="100" style="position: absolute; left: 0; top: 0; z-index: 1;">
-            <div class="canvas" id="blockly_editor" style="border: none; height: 552px; width: 1200px; opacity: 1;"></div> 
+
+
+        </div>
+            <div id="layer2" style="z-index: 1;">
+                 <div class="canvas" id="blocklyDiv" style="position: absolute"></div>
             </div>
-            <div style="position: absolute; left: 0px; top: 552px;">
+            <div id="resstart" style="position: absolute; left: 0px; top: 552px;z-index: 2 ">
                 <button id="runButton" class="primary" title="Run">
                     <img src="./assets/1x1.gif" class="run icon21">&nbsp;&nbsp;&nbsp;&nbsp;Run Program&nbsp;&nbsp;&nbsp;&nbsp;
                 </button>
-                <button id="resetButton" class="primary" style="display: none" title="Reset">
+                <button id="resetButton" class="primary" style="display: none;" title="Reset">
                     <img src="./assets/1x1.gif" class="stop icon21"> Reset
                 </button>
             </div>
-        </div>
-    </div>
-    <div id="container">
-    </div>
-    <xml id="toolbox" style="display: none">
+
+
+    <xml id="toolbox" style="display: none; background-color: #4d90fe;">
         <block type="maze_up"></block>
         <block type="maze_down"></block>
         <block type="maze_left"></block>
         <block type="maze_right"></block>
         <block type="fire"></block>
-        <block type="controls_repeat_ext"></block>
-        <block type="math_number"></block>
-        <block type="math_arithmetic"></block>
     </xml>  
     <xml id="startBlocks" style="display: none">
         <block type="factory_base" deletable="false" x="20" y="20"></block>
@@ -90,15 +89,46 @@
     <!-- include the main game file -->
     
     <script type="text/javascript">
-    var workspace = Blockly.inject('blockly_editor', { toolbox: document.getElementById('toolbox') });
-    Blockly.BlockSvg.START_HAT = true;
-    Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),
-                               workspace);
-    workspace.addChangeListener(Blockly.Events.disableOrphans);
+    //var workspace = Blockly.inject('blockly_editor', { toolbox: document.getElementById('toolbox') });
+
     </script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script>
+  var blocklyArea = document.getElementById('full-size');
+  var blocklyDiv = document.getElementById('blocklyDiv');
+  var workspace = Blockly.inject(blocklyDiv,
+      {toolbox: document.getElementById('toolbox')});
+
+      Blockly.BlockSvg.START_HAT = true;
+    Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),
+                               workspace);
+    workspace.addChangeListener(Blockly.Events.disableOrphans);
+  var onresize = function(e) {
+    // Compute the absolute coordinates and dimensions of blocklyArea.
+    var element = blocklyArea;
+    var x = 0;
+    var y = 0;
+    do {
+      x += element.offsetLeft;
+      y += element.offsetTop;
+      element = element.offsetParent;
+    } while (element);
+    // Position blocklyDiv over blocklyArea.
+    blocklyDiv.style.left = x + 'px';
+    blocklyDiv.style.top = y + 'px';
+    blocklyDiv.style.width = blocklyArea.offsetWidth + 'px';
+    blocklyDiv.style.height = blocklyArea.offsetHeight + 'px';
+    Blockly.svgResize(workspace);
+  };
+  window.addEventListener('resize', onresize, false);
+  onresize();
+  Blockly.svgResize(workspace);
+
+$("#resstart").css({"z-index": 20});
+
+</script>
 </body>
 
 </html>
