--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <a href="#" class="list-group-item list-group-item-action active">
     Список игр
   </a>
-        <a href="game1.html" class="list-group-item list-group-item-action">Уровень №1</a>
-        <a href="game2.html" class="list-group-item list-group-item-action">Уровень №2</a>
+        <a href="game1.html" class="list-group-item list-group-item-action">Учебная база альянса</a>
+        <a href="game2.html" class="list-group-item list-group-item-action">Галактическая система координат</a>
+        <a href="game3.html" class="list-group-item list-group-item-action">Конструктор уровней</a>
     </div>
     </div>
     <div class="col-sm">
