--- a/game2.html
+++ b/game2.html
@@ -109,6 +109,9 @@
     Blockly.svgResize(workspace);
 
     $("#resstart").css({ "z-index": 20 });
+    var buttonh = blocklyArea.offsetHeight - 200;
+$("#resstart").css({"z-index": 20});
+$("#resstart").css({"top": buttonh + 'px'});
     </script>
 </body>
 
