level 1-2 refactor, level3 debugging

--- a/game1.html
+++ b/game1.html
@@ -15,16 +15,13 @@
     <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
     <script type="text/javascript" src="js/maze.js"></script>
     
-    <script type="text/javascript" src="js/Boot1.js"></script>
-    <script type="text/javascript" src="js/Preload1.js"></script>
-    <script type="text/javascript" src="js/lesson11.js"></script>
-
-    <!-- <script type="text/javascript" src="js/lesson22.js"></script> -->
-    
+    <script type="text/javascript" src="js/game1/Boot.js"></script>
+    <script type="text/javascript" src="js/game1/Preload.js"></script>
+    <script type="text/javascript" src="js/game1/lesson11.js"></script>
 
     <script type="text/javascript" src="js/pegman.js"></script>
     <script type="text/javascript" src="js/blocks.js"></script>
-    <script type="text/javascript" src="js/main1.js"></script>
+    <script type="text/javascript" src="js/game1/main.js"></script>
     <style>
     .blocklySvg {
         background-color: transparent;
