--- a/game2.html
+++ b/game2.html
@@ -15,15 +15,15 @@
     <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
     <script type="text/javascript" src="js/maze.js"></script>
     <script type="text/javascript" src="js/pegman.js"></script>
-    <script type="text/javascript" src="js/Boot2.js"></script>
-    <script type="text/javascript" src="js/Preload2.js"></script>
-    <script type="text/javascript" src="js/lesson21.js"></script>
-    <script type="text/javascript" src="js/lesson22.js"></script>
-    <script type="text/javascript" src="js/lesson23.js"></script>
-    <script type="text/javascript" src="js/lesson24.js"></script>
-    <script type="text/javascript" src="js/lesson25.js"></script>
+    <script type="text/javascript" src="js/game2/Boot.js"></script>
+    <script type="text/javascript" src="js/game2/Preload.js"></script>
+    <script type="text/javascript" src="js/game2/lesson21.js"></script>
+    <script type="text/javascript" src="js/game2/lesson22.js"></script>
+    <script type="text/javascript" src="js/game2/lesson23.js"></script>
+    <script type="text/javascript" src="js/game2/lesson24.js"></script>
+    <script type="text/javascript" src="js/game2/lesson25.js"></script>
     <script type="text/javascript" src="js/blocks.js"></script>
-    <script type="text/javascript" src="js/main2.js"></script>
+    <script type="text/javascript" src="js/game2/main.js"></script>
     <style>
         .blocklySvg {
         background-color: transparent;
