--- a/game3.html
+++ b/game3.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/lib/phaser.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/lib/plugin.min.js"></script> 
     <script type="text/javascript" src="js/lib/blockly/blockly_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/blocks_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/javascript_compressed.js"></script>
@@ -20,7 +21,7 @@
     
     <script type="text/javascript" src="js/game3/Boot.js"></script>
     <script type="text/javascript" src="js/game3/Preload.js"></script>
-    <script type="text/javascript" src="js/game3/lesson31.js"></script>
+    <script type="text/javascript" src="js/game3/lesson3.js"></script>
 
     
     <script type="text/javascript" src="js/game3/main.js"></script>
