--- a/game3.html
+++ b/game3.html
@@ -67,7 +67,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p id="modaltext">Modal body text goes here.</p>
+                    <p id="modaltext"></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -87,8 +87,7 @@
     var workspace = Blockly.inject(blocklyDiv, { toolbox: document.getElementById('toolbox') });
 
     Blockly.BlockSvg.START_HAT = true;
-    Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),
-        workspace);
+    //Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),  workspace);
     workspace.addChangeListener(Blockly.Events.disableOrphans);
     var onresize = function(e) {
         // Compute the absolute coordinates and dimensions of blocklyArea.
