--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="game1.html" class="list-group-item list-group-item-action">Учебная база альянса</a>
         <a href="game2.html" class="list-group-item list-group-item-action">Галактическая система координат</a>
         <a href="game3.html" class="list-group-item list-group-item-action">Конструктор уровней</a>
+        <a href="game4.html" class="list-group-item list-group-item-action">Зима</a>
     </div>
     </div>
     <div class="col-sm">
