--- a/game4.html
+++ b/game4.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/lib/blockly/blocks_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/javascript_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
+    <script type="text/javascript" src="js/lib/HealthBar.standalone.js"></script>
     <script type="text/javascript" src="js/blocks.js"></script>
 
     <script type="text/javascript" src="js/maze.js"></script>
@@ -59,8 +60,11 @@
                 </div>
     </div>
     <xml id="toolbox" style="display: none; background-color: #4d90fe;">
-        <block type="changex"></block>
-        <block type="changey"></block>
+        <block type="maze_up"></block>
+        <block type="maze_down"></block>
+        <block type="maze_left"></block>
+        <block type="maze_right"></block>
+        <block type="fire"></block>
     </xml>
     <xml id="startBlocks" style="display: none">
         <block type="factory_base" deletable="false" x="20" y="20"></block>
@@ -91,7 +95,9 @@
     <script>
     var blocklyArea = document.getElementById('full-size');
     var blocklyDiv = document.getElementById('blocklyDiv');
-    var workspace = Blockly.inject(blocklyDiv, { toolbox: document.getElementById('toolbox') });
+    var workspace = Blockly.inject(blocklyDiv, 
+    {   maxBlocks: 100,
+        toolbox: document.getElementById('toolbox') });
 
     Blockly.BlockSvg.START_HAT = true;
     //Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),  workspace);
@@ -121,6 +127,15 @@
     var buttonh = blocklyArea.offsetHeight - 200;
 $("#resstart").css({"z-index": 20});
 $("#resstart").css({"top": buttonh + 'px'});
+
+
+    function onchange(event) {
+      capacity = workspace.remainingCapacity();
+    }
+    workspace.addChangeListener(onchange);
+    onchange();
+
+
     </script>
 </body>
 
