--- a/game1.html
+++ b/game1.html
@@ -57,6 +57,7 @@
         <block type="maze_down"></block>
         <block type="maze_left"></block>
         <block type="maze_right"></block>
+        <block type="uturn"></block>
         <block type="fire"></block>
     </xml>  
     <xml id="startBlocks" style="display: none">
