--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="game2.html" class="list-group-item list-group-item-action">Галактическая система координат</a>
         <a href="game3.html" class="list-group-item list-group-item-action">Конструктор уровней</a>
         <a href="game4.html" class="list-group-item list-group-item-action">Зима</a>
+        <a href="game5test.html" class="list-group-item list-group-item-action">test</a>
     </div>
     </div>
     <div class="col-sm">
