--- a/game5.html
+++ b/game5.html
@@ -22,12 +22,12 @@
     <script type="text/javascript" src="js/maze.js"></script>
     <script type="text/javascript" src="js/pegman.js"></script>
 
-    <script type="text/javascript" src="js/game5test/Boot.js"></script>
-    <script type="text/javascript" src="js/game5test/Preload.js"></script>
-    <script type="text/javascript" src="js/game5test/lesson4.js"></script>
+    <script type="text/javascript" src="js/game5/Boot.js"></script>
+    <script type="text/javascript" src="js/game5/Preload.js"></script>
+    <script type="text/javascript" src="js/game5/lesson5.js"></script>
 
 
-    <script type="text/javascript" src="js/game5test/main.js"></script>
+    <script type="text/javascript" src="js/game5/main.js"></script>
     <style>
         .blocklySvg {
         background-color: transparent;
@@ -62,8 +62,14 @@
         </div>
     </div>
     <xml id="toolbox" style="display: none; background-color: #4d90fe;">
-        <block type="fire"></block>
-        <block type="uturn"></block>
+        <block type="maze_up"></block>
+        <block type="maze_down"></block>
+        <block type="maze_left"></block>
+        <block type="maze_right"></block>
+        <block type="controls_if"></block>
+        <block type="logic_negate"></block>
+        <block type="logic_boolean"></block>
+        <block type="obstacle"></block>
     </xml>
     <xml id="startBlocks" style="display: none">
         <block type="factory_base" deletable="false" x="100" y="20"></block>
