Bug in game by Azamat: no blinking after reset

--- a/game5.html
+++ b/game5.html
@@ -67,6 +67,7 @@
         <block type="maze_left"></block>
         <block type="maze_right"></block>
         <block type="controls_if"></block>
+        <block type="logic_operation"></block>
         <block type="logic_negate"></block>
         <block type="logic_boolean"></block>
         <block type="obstacle"></block>
