fill the pit block

--- a/game5.html
+++ b/game5.html
@@ -71,6 +71,7 @@
         <block type="logic_negate"></block>
         <block type="logic_boolean"></block>
         <block type="obstacle"></block>
+        <block type="fill_the_pit"></block>
     </xml>
     <xml id="startBlocks" style="display: none">
         <block type="factory_base" deletable="false" x="100" y="20"></block>
