--- a/game1.html
+++ b/game1.html
@@ -7,7 +7,9 @@
     <title>Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="js/lib/phaser.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/lib/blockly/blockly_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/blocks_compressed.js"></script>
@@ -30,7 +32,7 @@
 
 </head>
 
-<body onload="init();">
+<body>
 
         <div id="full-size" >
             <div id="layer1" style="z-index: 0;">
@@ -43,12 +45,7 @@
                  <div class="canvas" id="blocklyDiv" style="position: absolute"></div>
             </div>
             <div id="resstart" style="position: absolute; left: 0px; top: 552px;z-index: 2 ">
-                <button id="runButton" class="primary" title="Run">
-                    <img src="./assets/1x1.gif" class="run icon21">&nbsp;&nbsp;&nbsp;&nbsp;Run Program&nbsp;&nbsp;&nbsp;&nbsp;
-                </button>
-                <button id="resetButton" class="primary" style="display: none;" title="Reset">
-                    <img src="./assets/1x1.gif" class="stop icon21"> Reset
-                </button>
+                <button class= "play" id="play" value="play"><i id="play" class="fa fa-play" aria-hidden="true"></i>&nbsp;<span>Запуск</span></button>
             </div>
 
 
