--- a/game5.html
+++ b/game5.html
@@ -7,6 +7,7 @@
     <title>Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/lib/phaser.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -26,17 +27,10 @@
     <script type="text/javascript" src="js/game5/Preload.js"></script>
     <script type="text/javascript" src="js/game5/lesson5.js"></script>
 
-
     <script type="text/javascript" src="js/game5/main.js"></script>
-    
-    <style>
-        .blocklySvg {
-        background-color: transparent;
-    }
-    </style>
-</head>
 
-<body onload="init();">
+</head>
+<body>
     <div id="full-size">
         <div id="layer1" style="z-index: 0;">
             <div class="canvas" id="canvasContainer"></div>
@@ -46,21 +40,7 @@
         <div class="canvas" id="blocklyDiv" style="position: absolute"></div>
     </div>
     <div id="resstart" style="position: absolute; left: 0px; top: 552px;z-index: 2 ">
-
-        <div class="btn-group-vertical">
-
-
-            <button id="runButton" class="primary" title="Run">
-                <img src="./assets/1x1.gif" class="run icon21">&nbsp;&nbsp;&nbsp;&nbsp;Запуск&nbsp;&nbsp;&nbsp;&nbsp;
-            </button>
-            <button id="resetButton" class="primary" style="display: none;" title="Reset">
-                <img src="./assets/1x1.gif" class="stop icon21"> Сброс
-            </button>
-            <button type="button" id="nextButton" class="btn btn-success" style="display: none; title=" Next">
-                Следущий
-            </button>
-
-        </div>
+        <button class="play" id="play" value="play"><i id="play" class="fa fa-play" aria-hidden="true"></i>&nbsp;<span>Запуск</span></button>
     </div>
     <xml id="toolbox" style="display: none; background-color: #4d90fe;">
         <block type="maze_up"></block>
@@ -103,6 +83,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script>
+
+
+
+
+
+
+
         var blocklyArea = document.getElementById('full-size');
         var blocklyDiv = document.getElementById('blocklyDiv');
         var workspace = Blockly.inject(blocklyDiv,
