--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <a href="game2.html" class="list-group-item list-group-item-action">Галактическая система координат</a>
         <a href="game3.html" class="list-group-item list-group-item-action">Конструктор уровней</a>
         <a href="game4.html" class="list-group-item list-group-item-action">Зима</a>
-        <a href="game5test.html" class="list-group-item list-group-item-action">test</a>
+        <a href="game5.html" class="list-group-item list-group-item-action">Game 5 Test</a>
+        <a href="game11.html" class="list-group-item list-group-item-action">phaser-tiled</a>
     </div>
     </div>
     <div class="col-sm">
