save and reload in level 2

--- a/game3.html
+++ b/game3.html
@@ -52,7 +52,7 @@
 
             <button class="play" id="play" value="play"><i id="play" class="fa fa-play" aria-hidden="true"></i>&nbsp;<span>Запуск</span></button>
 
-            <button type="button" id="nextButton" class="btn btn-success" style="display: none; title=" Next">
+            <button type="button" id="nextButton" class="btn btn-success" style="display: none;" title=" Next">
                 Следущий
             </button>
 
