--- a/game2.html
+++ b/game2.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/lib/phaser.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="js/lib/blockly/blockly_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/blocks_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/javascript_compressed.js"></script>
@@ -34,7 +35,9 @@
     </style>
 </head>
 
-<body onload="init();">
+<body>
+    <button type="button" class="btn btn-primary" id="loaddata">LOAD</button>
+    <button type="button" class="btn btn-secondary" id="savedata">SAVE</button>
     <div id="full-size">
         <div id="layer1" style="z-index: 0;">
             <div class="canvas" id="canvasContainer"></div>
@@ -79,6 +82,70 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script>
+        var scene;
+        $.ajaxSetup({
+            headers: {
+                //  'Authorization': 'Bearer ' + localStorage.getItem('token')
+                'Authorization': 'JWT eyJhbGciOiJIUzUxMiJ9.eyJyb2xlIjoiU1RVREVOVCIsImxvZ2luIjoi0YPRh9C10L3QuNC6X9C90L7QstGL0LkiLCJzdWIiOiIxNSIsImV4cCI6MTU0NjgzNzg2NX0.4NN2QI3pRHCJEPsRIXdTitg9nJ47dku3SbUWv-eb6BAeVM9QlNFlbI-YZU-jdlmjnjVdUfl8Ymt0gjHEBgfsEA'
+            }
+        });
+
+        function saveWorkspace() {
+            var xmlDom = Blockly.Xml.workspaceToDom(Blockly.mainWorkspace);
+            var xmlText = Blockly.Xml.domToPrettyText(xmlDom);
+
+            var newTemp = xmlText.replace(/"/g, "'");
+            var datatoStore = {};
+            datatoStore.code = newTemp;
+            datatoStore.scene = scene;
+
+
+            $.ajax({
+                type: "POST",
+                url: "http://198.23.152.169:8080/api/save",
+                // The key needs to match your method's input parameter (case-sensitive).
+                data: JSON.stringify({ "data": JSON.stringify(datatoStore), "lessonId": 23 }),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (data) { console.log(data); },
+                failure: function (errMsg) {
+                    alert(errMsg);
+                }
+            });
+        }
+
+        function loadWorkspace() {
+
+
+            $.ajax({
+                type: 'GET',
+                url: 'http://198.23.152.169:8080/api/save?lesson-id=23&user-id=15',
+                success: function (data) {
+                    console.log(JSON.parse(data.data));
+                    if (data) {
+                        var code = JSON.parse(data.data).code;
+                        var scene = JSON.parse(data.data).scene;
+                        TopDownGame.game.state.start('lesson2' + scene);
+
+                        Blockly.mainWorkspace.clear();
+                        xmlDom = Blockly.Xml.textToDom(JSON.parse(data.data).code);
+                        Blockly.Xml.domToWorkspace(xmlDom, Blockly.mainWorkspace);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    alert(xhr.status);
+                    alert(thrownError);
+                }
+            });
+
+        }
+
+        $("#loaddata").click(function () {
+            loadWorkspace();
+        });
+        $("#savedata").click(function () {
+            saveWorkspace();
+        });
         var blocklyArea = document.getElementById('full-size');
         var blocklyDiv = document.getElementById('blocklyDiv');
         var workspace = Blockly.inject(blocklyDiv, { toolbox: document.getElementById('toolbox') });
@@ -112,6 +179,7 @@
         var buttonh = blocklyArea.offsetHeight - 200;
         $("#resstart").css({ "z-index": 20 });
         $("#resstart").css({ "top": buttonh + 'px' });
+
     </script>
 </body>
 
