--- a/game2.html
+++ b/game2.html
@@ -82,14 +82,17 @@
         crossorigin="anonymous"></script>
     <script>
         var scene;
-        $.ajaxSetup({
-            headers: {
-                'Authorization': localStorage.getItem('token')
-                //'Authorization': 'JWT eyJhbGciOiJIUzUxMiJ9.eyJyb2xlIjoiU1RVREVOVCIsImxvZ2luIjoi0YPRh9C10L3QuNC6X9C90L7QstGL0LkiLCJzdWIiOiIxNSIsImV4cCI6MTU0NzAzOTMwOH0.nii7ByRsGA5AXN8f3PMdSQ6Psb0F3LNrkhu_EAn7rOot5vQ13tf1WQgjpo7xtmpfeh4Ax9DUNsM73fYkVXNaIQ'
-            }
-        });
+
 
         function saveWorkspace() {
+
+            var params = location.href.split('?')[1].split('&');
+            data = {};
+            for (x in params) {
+                console.log(x);
+                data[params[x].split('=')[0]] = params[x].split('=')[1];
+            }
+
             var xmlDom = Blockly.Xml.workspaceToDom(Blockly.mainWorkspace);
             var xmlText = Blockly.Xml.domToPrettyText(xmlDom);
 
@@ -100,14 +103,9 @@
 
 
             $.ajax({
-                $.ajaxSetup({
-            headers: {
-                'Authorization': localStorage.getItem('token')
-                //'Authorization': 'JWT eyJhbGciOiJIUzUxMiJ9.eyJyb2xlIjoiU1RVREVOVCIsImxvZ2luIjoi0YPRh9C10L3QuNC6X9C90L7QstGL0LkiLCJzdWIiOiIxNSIsImV4cCI6MTU0NzAzOTMwOH0.nii7ByRsGA5AXN8f3PMdSQ6Psb0F3LNrkhu_EAn7rOot5vQ13tf1WQgjpo7xtmpfeh4Ax9DUNsM73fYkVXNaIQ'
-            }
-        });
                 type: "POST",
                 url: "https://backend.it.robooky.ru/api/save",
+                headers: { "Authorization": data.token },
                 // The key needs to match your method's input parameter (case-sensitive).
                 data: JSON.stringify({ "data": JSON.stringify(datatoStore), "lessonId": 23 }),
                 contentType: "application/json; charset=utf-8",
@@ -120,16 +118,17 @@
         }
 
         function loadWorkspace() {
-            $.ajaxSetup({
-            headers: {
-                'Authorization': localStorage.getItem('token')
-                //'Authorization': 'JWT eyJhbGciOiJIUzUxMiJ9.eyJyb2xlIjoiU1RVREVOVCIsImxvZ2luIjoi0YPRh9C10L3QuNC6X9C90L7QstGL0LkiLCJzdWIiOiIxNSIsImV4cCI6MTU0NzAzOTMwOH0.nii7ByRsGA5AXN8f3PMdSQ6Psb0F3LNrkhu_EAn7rOot5vQ13tf1WQgjpo7xtmpfeh4Ax9DUNsM73fYkVXNaIQ'
+            var params = location.href.split('?')[1].split('&');
+            data = {};
+            for (x in params) {
+                console.log(x);
+                data[params[x].split('=')[0]] = params[x].split('=')[1];
             }
-        });
 
             $.ajax({
                 type: 'GET',
                 url: 'https://backend.it.robooky.ru/api/save?lesson-id=23&user-id=15',
+                headers: { "Authorization": data.token },
                 success: function (data) {
                     console.log(JSON.parse(data.data));
                     if (data) {
