--- a/game2.html
+++ b/game2.html
@@ -92,6 +92,7 @@
                 console.log(x);
                 data[params[x].split('=')[0]] = params[x].split('=')[1];
             }
+            urldata.token = decodeURIComponent(urldata.token);
 
             var xmlDom = Blockly.Xml.workspaceToDom(Blockly.mainWorkspace);
             var xmlText = Blockly.Xml.domToPrettyText(xmlDom);
@@ -125,6 +126,7 @@
                 
                 urldata[params[x].split('=')[0]] = params[x].split('=')[1];
             }
+            urldata.token = decodeURIComponent(urldata.token);
             console.log(urldata);
             $.ajax({
                 type: 'GET',
