--- a/game1.html
+++ b/game1.html
@@ -11,19 +11,18 @@
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="js/lib/phaser.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  <script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/lib/blockly/blockly_compressed.js"></script>
   <script type="text/javascript" src="js/lib/blockly/blocks_compressed.js"></script>
   <script type="text/javascript" src="js/lib/blockly/javascript_compressed.js"></script>
   <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
   <script type="text/javascript" src="js/maze.js"></script>
-
+  <script type="text/javascript" src="js/pegman.js"></script>
   <script type="text/javascript" src="js/game1/Boot.js"></script>
   <script type="text/javascript" src="js/game1/Preload.js"></script>
-  <script type="text/javascript" src="js/game1/lesson11.js"></script>
+  <script type="text/javascript" src="js/game1/lesson1.js"></script>
 
-  <script type="text/javascript" src="js/pegman.js"></script>
   <script type="text/javascript" src="js/blocks.js"></script>
   <script type="text/javascript" src="js/game1/main.js"></script>
   <style>
@@ -97,6 +96,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <script>
+
+    var scene;
     var blocklyArea = document.getElementById('full-size');
     var blocklyDiv = document.getElementById('blocklyDiv');
     var workspace = Blockly.inject(blocklyDiv,
