--- a/game5.html
+++ b/game5.html
@@ -52,6 +52,7 @@
         <block type="logic_negate"></block>
         <block type="logic_boolean"></block>
         <block type="obstacle"></block>
+        <block type="repeat_n_times"></block>
         <block type="fill_the_pit"></block>
     </xml>
     <xml id="startBlocks" style="display: none">
