https://trello.com/c/FdVtn14M

--- a/game5.html
+++ b/game5.html
@@ -47,10 +47,11 @@
         <block type="maze_down"></block>
         <block type="maze_left"></block>
         <block type="maze_right"></block>
-        <block type="controls_if"></block>
+        <block type="if_block"></block>
+        <block type="controls_ifelse"></block>
         <block type="logic_operation"></block>
         <block type="logic_negate"></block>
-        <block type="logic_boolean"></block>
+
         <block type="obstacle"></block>
         <block type="repeat_n_times"></block>
         <block type="fill_the_pit"></block>
