games 1-5 bullet, camera speed. Async open of next lesson

--- a/game4.html
+++ b/game4.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
     <script type="text/javascript" src="js/lib/HealthBar.standalone.js"></script>
     <script type="text/javascript" src="js/blocks.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
 
     <script type="text/javascript" src="js/maze.js"></script>
     <script type="text/javascript" src="js/pegman.js"></script>
