--- a/game3.html
+++ b/game3.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="js/lib/blockly/javascript_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
     <script type="text/javascript" src="js/blocks.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
 
     <script type="text/javascript" src="js/maze.js"></script>
     <script type="text/javascript" src="js/pegman.js"></script>
