--- a/game0.html
+++ b/game0.html
@@ -20,12 +20,12 @@
   <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/maze.js"></script>
   <script type="text/javascript" src="js/pegman.js"></script>
-  <script type="text/javascript" src="js/game1/Boot.js"></script>
-  <script type="text/javascript" src="js/game1/Preload.js"></script>
-  <script type="text/javascript" src="js/game1/lesson1.js"></script>
+  <script type="text/javascript" src="js/game0/Boot.js"></script>
+  <script type="text/javascript" src="js/game0/Preload.js"></script>
+  <script type="text/javascript" src="js/game0/lesson.js"></script>
 
   <script type="text/javascript" src="js/blocks.js"></script>
-  <script type="text/javascript" src="js/game1/main.js"></script>
+  <script type="text/javascript" src="js/game0/main.js"></script>
   <style>
     .blocklySvg {
         background-color: transparent;
